--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/realisations/realisations.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/realisations/realisations.component.html
@@ -5,7 +5,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
         @for (realisation of paginatedRealisations; track realisation.id) {
         <div class="col d-flex align-items-stretch">
-            <a routerLink="/realisation/{{realisation.id}}" class="text-decoration-none w-100">
+            <a routerLink="/projet/detail/{{realisation.id}}" class="text-decoration-none w-100">
                 <div class="card h-100 text-center shadow-sm border-0 card-hover rounded">
                     @if (realisation.imageProjet && realisation.imageProjet.length > 0) {
                     <img [src]="url + realisation.imageProjet[0].nom" class="card-img-top rounded" alt="Image de la réalisation">
