--- a/2.DynamoCraft.UI/src/styles.scss
+++ b/2.DynamoCraft.UI/src/styles.scss
@@ -526,3 +526,175 @@ i {
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
+
+.custom-table {
+    background-color: $couleur-fond;
+    font-family: 'ethnocentric', sans-serif;
+    /* Assurez-vous que la police 'ethnocentric' est correctement appliquée */
+}
+
+.custom-table thead th,
+.custom-table tbody td {
+    border-color: #FFD700;
+    /* Couleur or pour les bordures */
+    color: #FFD700;
+    /* Texte couleur or */
+}
+
+.custom-table {
+    background-color: $couleur-fond;
+    font-family: 'ethnocentric', sans-serif;
+
+    thead th {
+        border-color: #FFD700;
+        color: #FFD700;
+        background-color: $couleur-fond-2;
+    }
+
+    tbody td {
+        border-color: #FFD700;
+        color: #ffffff;
+    }
+
+    tbody tr:nth-of-type(odd) {
+        background-color: rgba(255, 215, 0, 0.1);
+    }
+
+    tbody tr:nth-of-type(even) {
+        background-color: rgba(255, 215, 0, 0.05);
+    }
+}
+
+.table-dark {
+    background-color: $couleur-fond-2;
+    color: #ffffff;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(255, 215, 0, 0.1);
+    /* Légère teinte or pour les lignes impaires */
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+    background-color: rgba(255, 215, 0, 0.05);
+    /* Légère teinte or pour les lignes paires */
+}
+
+.no-models {
+    background-color: $couleur-fond;
+    /* Même couleur de fond que la vue */
+    color: #FFD700;
+    /* Couleur du texte or */
+}
+
+.table-wrapper {
+    min-height: 30vh;
+    overflow-y: auto;
+    position: relative;
+}
+
+.table-fixed-header thead th {
+    position: sticky;
+    top: 0;
+    background-color: $couleur-fond;
+    /* Fond des headers */
+    z-index: 10;
+    text-transform: uppercase;
+    border-bottom: 2px solid $couleur-main;
+}
+
+
+
+/* Scrollbar stylisée */
+.table-wrapper::-webkit-scrollbar {
+    width: 12px;
+}
+
+.table-wrapper::-webkit-scrollbar-track {
+    background: #444;
+}
+
+.table-wrapper::-webkit-scrollbar-thumb {
+    background-color: #FFD700;
+    border-radius: 10px;
+    border: 3px solid #333;
+}
+
+.no-models {
+    min-height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+.icon-highlight {
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 5px;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.icon-highlight:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    transform: scale(1.2);
+    /* Agrandissement sur survol */
+}
+
+.highlight-comment {
+    border: 2px solid #ffc107;
+    transition: border 0.5s ease-in-out;
+}
+
+.profile-image-wrapper {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.profile-image-wrapper:hover .profile-image {
+    transform: scale(1.1);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    border-radius: 50%;
+}
+
+.profile-image-wrapper:hover .overlay {
+    opacity: 1;
+}
+
+.hauteur-30{
+    min-height: 30vh;
+}
+
+.hover-content {
+    transition: opacity 0.3s ease;
+}
+
+.card-hover:hover .hover-content {
+    opacity: 1;
+}
